fixed container spacing

--- a/_static/src/assets/scss/objects/layout/_viewWindow.scss
+++ b/_static/src/assets/scss/objects/layout/_viewWindow.scss
@@ -40,7 +40,7 @@ Layout for paneled views
 }
 
 .viewWindow-panel_story .viewWindow-panel-content-inner {
-    border-top: 70px solid $CLR_GRAY_LIGHTER;
+    padding-top: 70px;
 }
 
 // .viewWindow-panel.isActive > .viewWindow-panel-content {
@@ -118,7 +118,7 @@ Layout for paneled views
     }
 
     .viewWindow-panel_story .viewWindow-panel-content-inner {
-        border-top: 0;
+        padding-top: 0;
     }
 }
 
