--- a/_static/src/assets/scss/objects/module/_introblock.scss
+++ b/_static/src/assets/scss/objects/module/_introblock.scss
@@ -49,6 +49,11 @@ Sections of content that introduce landing and story pages
     border-top: 1px solid #d0cfc6;
 }
 
+// hide border
+.viewWindow-panel-content-inner > .introBlock {
+    margin-top: -70px;
+}
+
 @include breakpoint(MD) {
     .introBlock {
         height: 620px;
@@ -65,6 +70,11 @@ Sections of content that introduce landing and story pages
         left: 12.5%;
         width: 75%;
         text-align: center;
+    }
+
+    // reset border
+    .viewWindow-panel-content-inner > .introBlock {
+        margin-top: 0;
     }
 }
 
